[package]
name = "solana-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-bpf = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.11.1"

[dev-dependencies]
solana-program-test = "1.11.1"
solana-logger = "1.11.1"
solana-sdk = "1.11.1"
solana-validator = "1.11.1"

[lib]
crate-type = ["cdylib", "lib"]
